added support for PostgreSQL and automatic currency exchange rate updates. New routes for working with the database have been added, as well as the documentation in the README has been updated
